# empow-tiktok

./: .env  .gitignore  PROJECT_STATUS.md  README.md  README_scraper.md  example.py  main.py  pyproject.toml  scraper.py  setup.py
.promptx/resource/role/code-manager/: code-manager.role.md
.promptx/resource/role/code-manager/execution/: code-management-workflow.execution.md
.promptx/resource/role/code-manager/thought/: code-management-expertise.thought.md
.promptx/resource/role/python-expert/: python-expert.role.md
.promptx/resource/role/python-expert/execution/: python-development-workflow.execution.md
.promptx/resource/role/python-expert/thought/: python-expertise.thought.md
.trae/documents/: apify-data-integration-requirements.md
.vercel/: project.json
src/: __init__.py  apify_service.py  config.py  core.py  task_manager.py
